Demo2/vpc.tf
# Internet VPC
resource "aws_vpc" "Koijam-VPC" {
    cidr_block = "10.0.0.0/16"
    instance_tenancy = "default"
    enable_dns_support = "true"
    enable_dns_hostnames = "true"
    enable_classiclink = "false"
    tags {
        Name = "Koijam-VPC"
    }
}
